set up deployment scripts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
   <div style="font-family:future-thin; position: absolute; left:-1000px; visibility:hidden;">.</div>
-  <script src="build/project.bundle.js" charset="utf-8"></script>
+  <script src="dist/project.bundle.js" charset="utf-8"></script>
 </body>
 
 </html>
